<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Sign_Up2">

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/abc_vector_test"
        android:scaleType="fitXY"
        android:src="@drawable/account_box_24px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:id="@+id/SignUp2View">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:padding="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/Hint_Email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:padding="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Re-enter Password"
            android:padding="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword2"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext2"
            android:text="@string/next"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>