<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/SignUpView"
    android:padding="16dp">

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/abc_vector_test"
        android:scaleType="fitXY"
        android:src="@drawable/account_box_24px" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="ID Number"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtID"
                    android:hint="0101011234567"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Name"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtName"
                    android:hint="@string/name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Surname"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtSurname"
                    android:hint="@string/surname"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Gender"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/gender"/>
                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="Female"/>
                    <RadioButton
                        android:id="@+id/rbNeither"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="Neither"/>
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Date of Birth"
                    android:padding="10dp"
                    android:textSize="20sp"/>

                <DatePicker
                    android:id="@+id/dpDoB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Diagnosed"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radDiagnosed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:text="Yes"/>
                    <RadioButton
                        android:id="@+id/rbNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="No"/>
                </RadioGroup>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnNext1"
                    android:text="@string/next"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </TableLayout>
    </ScrollView>
</LinearLayout>