<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <include
            layout="@layout/main_toolbar"/>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/abc_vector_test"
            android:scaleType="fitXY"
            android:src="@drawable/account_box_24px"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBio"
                    android:text="Edit Your Information"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Name"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/txtName"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Surname"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surname"
                        android:id="@+id/txtSurname"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Date of Birth"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:id="@+id/txtDoB"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Age"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:id="@+id/txtAge"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Height (m)"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.8"
                        android:id="@+id/txtHeight"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Weight (kg)"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="75"
                        android:id="@+id/txtWeight"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Body Mass Index (BMI)"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23.10"
                        android:id="@+id/txtBMI"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Conditions"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Asthma, plus a whole lot of other stuff"
                        android:id="@+id/txtConditions"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Have you been diagnosed with COVID-19"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:textAlignment="center"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Yes"
                            android:id="@+id/btnYes"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="If you had COVID-19, have you recovered"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:textAlignment="center"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Recovered"
                            android:id="@+id/btnRecovered"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>